test/src/e2e_vm_tests/test_programs/should_fail/abi_fallback_multiple/src/main.sw
contract;

abi ConstantId {
    const ID: u32 = 0;
}

#[fallback]
fn fallback_1() {
}

#[fallback]
fn fallback_2() {
}
